tests/ui/consts/const-eval/const_panic_track_caller.stderr
error[E0080]: evaluation of constant value failed
  --> $DIR/const_panic_track_caller.rs:15:5
   |
LL |     b()
   |     ^^^ hey
   |
note: inside `X`
  --> $DIR/const_panic_track_caller.rs:20:16
   |
LL | const X: u32 = c();
   |                ^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0080`.
